fixed spacing

--- a/styles/Survey.module.css
+++ b/styles/Survey.module.css
@@ -43,7 +43,7 @@
 
 .inlineRadio{
     font-size: 1.4rem;
-    margin-right: 5rem;
+    margin-right: 7rem;
 }
 .inlineRadio input{
     margin-right: 10px;
